# BasicQt

./: CMakeLists.txt  Readme.md  main.cpp
